GNOME Bugzilla – Bug 777747
reset should not modify the encoding
Last modified: 2017-02-13 11:03:51 UTC
In bug 731208 (and a little bit in bug 732586) we agreed that escape sequences should not be able to modify the charset, the charset should be an API-only thing. Alas, its implementation (which appeared in vte-0.40) is incomplete. Some "reset" escape sequences (at least "\ec" and "\e[!p") change the actual encoding to UTF-8, overriding what was set via the API (that is, via profile prefs / app menu). They should leave the charset unaltered. (Discovered in https://bugzilla.xfce.org/show_bug.cgi?id=13054#c7.)
Same goes for the "Reset" and "Reset and Clear" menu entries.
Should be just a matter of removing /* Reset the encoding. */ set_encoding(nullptr /* UTF-8 */); g_assert_cmpstr(m_encoding, ==, "UTF-8"); from VteTerminalPrivate::reset(), right?
Hopefully. Will take a closer look at some point in the not too distant future.
I've tried it out and indeed this seems to be the correct fix.
Hi Egmont, Christian, Any plans on fixing this? It's started bothering users: https://bugzilla.xfce.org/show_bug.cgi?id=13351
Igor - thanks for the bugreports and the ping :) Christian - thanks for the fix :)
Egmont, Christian, BTW, I'm not able to build vte from git master - autogen.sh fails with bindings/Makefile.am:7: error: ENABLE_VAPIGEN does not appear in AM_CONDITIONAL I guess it got broken with commit f0691d3e847058c181280670b477e61142a10c50.
Works for me on yakkety.
OK, it seems I have to install vala. Thanks!
Christian, Your commit 2d04ed4c5de05937022940c1d5ef0d4465b47595 helped partially: build process now goes further but then still fails with configure: error: Vala requested but M4 macros not installed.
That's expected. You'll need to pass --disable-vala since vala is enabled by default; the build fix only allows autoreconf to work without the macros installed. I'll improve the error message to hint to --disable-vala.
OK, thanks.