emulation: Reset should not switch encoding

https://bugzilla.gnome.org/show_bug.cgi?id=777747